# T-ESP-901-PAR_BagTrip

./: .env  .env.example  .env.prod.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .trivyignore  AUDIT_TECHNIQUE_BAGTRIP.md  CRITIQUE_KANBAN_V1.md  Caddyfile  Dockerfile.sonar-scanner  FRONTEND_ENV_SETUP.md  Makefile  README.md  check_db.py  compose.prod.yml  compose.yml  rapport_implementation.md  report.md  sonar-project.properties
api/: .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  Dockerfile.dev  PLAN.md  README.md  TESTING_PLAN.md  alembic.ini  eslint.config.js  eslint.config.mjs  langgraph.json  package-lock.json  package.json  pyproject.toml  ruff.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_baseline.py  0002_align_trip_model.py  0003_add_trip_shares.py  0004_drop_hotel_conversation_tables.py  0005_add_accommodations_and_baggage_items.py  0006_create_activities.py  0007_create_budget_items.py  0008_add_feedbacks_table.py  0009_add_budget_item_source_tracking.py  0010_add_notifications_and_device_tokens.py  0011_add_user_plan_and_quotas.py  0012_cleanup_data_models.py  0013_add_flight_order_payment_ticket.py  0014_create_manual_flights.py  0015_add_activity_validation_status.py  0016_add_medical_constraints_to_profile.py  0017_unify_activity_and_baggage_categories.py  0018_add_notification_type_trip_started.py  0019_add_trip_date_mode.py  0020_add_ai_experience_rating_to_feedbacks.py  0021_accommodation_checkin_checkout_to_datetime.py  0022_add_travel_frequency_to_profile.py  0023_add_destination_timezone_to_trips.py  0024_add_is_done_to_activities.py  0024_create_pending_invites.py  0025_create_pending_invites.py  0026_add_user_ban_and_soft_delete.py  0027_create_audit_logs.py  0028_add_tracking_and_validation_status.py  0029_split_trip_budget_total.py  0030_add_currency_to_trips_and_budget_items.py  0031_backfill_budget_item_source_type.py  0032_activity_date_nullable.py  1fb93ffa52b4_add_password_reset_fields.py
api/src/: __init__.py  enums.py  index.ts  main.py
api/src/agent/: __init__.py  budget.py  graph.py  prompts.py  react_executor.py  retry.py  runtime_budget.py  state.py  tools.py
api/src/app/: app.ts  routes.ts  server.ts
api/src/config/: circuit.ts  database.py  env.py  env.ts  http.ts  plans.py  swagger.ts
api/src/integrations/: http_client.py  redis_client.py
api/src/jobs/: currency_refresh_job.py  notification_job.py  plan_expiration_job.py  trip_status_job.py  zombie_payment_intents_job.py
api/src/middleware/: rate_limit.py  request_id.py  security_headers.py
api/src/migrations/: migrate_booking_tables.py  migrate_conversation_tables.py  migrate_refresh_tokens.py  migrate_traveler_profiles.py  migrate_trips_table.py  migrate_user_table.py
api/src/models/: __init__.py  accommodation.py  activity.py  amadeus_api_log.py  audit_log.py  baggage_item.py  booking.py  booking_intent.py  budget_item.py  context.py  conversation.py  device_token.py  feedback.py  flight_offer.py  flight_order.py  flight_search.py  hotel_booking.py  hotel_offer.py  hotel_search.py  manual_flight.py  message.py  notification.py  pending_invite.py  refresh_token.py  stripe_event.py  traveler.py  traveler_profile.py  trip.py  trip_share.py  user.py
api/src/seeds/: create_admin.py
api/src/services/: accommodation_ai_service.py  accommodations_service.py  activity_ai_service.py  activity_service.py  admin_service.py  airlabs_service.py  amadeus_service.py  audit_service.py  baggage_ai_service.py  baggage_items_service.py  booking_intents_service.py  booking_orchestrator_service.py  budget_ai_service.py  budget_item_service.py  context_service.py  conversation_service.py  currency_service.py  destination_inspiration_service.py  device_token_service.py  feedback_service.py  flight_offer_pricing_service.py  flight_search_service.py  hotel_search_service.py  inspire_ai_service.py  llm_service.py  location_resolver.py  manual_flight_service.py  message_service.py  notification_service.py  plan_acceptance_service.py  plan_service.py  post_trip_ai_service.py  profile_service.py  stripe_gateway_service.py  stripe_payments_service.py  stripe_products_service.py  stripe_webhooks_service.py  subscription_service.py  travelers_service.py  trip_planner_service.py  (+3 more)
api/src/utils/: cookies.py  distributed_lock.py  errors.py  errors.ts  iata_timezone.py  idempotency.py  locale.py  logger.py  logger.ts  timeout.py  unit_of_work.py
api/tests/: conftest.py  test_accept_endpoint.py  test_auto_transition_notifications.py  test_auto_traveler.py  test_cover_image.py  test_date_mode.py  test_destinations_only_mode.py  test_enum_migration.py  test_main.py  test_migrations_m2_m3.py  test_node_retry.py  test_notification_type_trip_started.py  test_plan_trip_schema.py  test_share_notification.py  test_state_injection.py  test_time_of_day_mapping.py  test_trip_validation.py  test_weather_fallback.py
api/tests/agent/: test_budget.py  test_flight_fallback.py  test_graph.py  test_prompts_render.py  test_react_executor.py  test_react_executor_repair.py  test_runtime_budget.py  test_state.py
api/tests/api/: test_metrics.py
api/tests/config/: test_database.py  test_env.py
api/tests/integration/: test_full_flow.py
api/tests/jobs/: test_currency_refresh_job.py  test_plan_expiration_job.py  test_zombie_payment_intents_job.py
api/tests/migrations/: test_migrations.py
api/tests/services/: test_accommodations_service.py  test_activity_service.py  test_admin_service.py  test_baggage_items_service.py  test_booking_intents_service.py  test_booking_orchestrator_service.py  test_budget_e2e_flow.py  test_budget_item_service.py  test_currency_service.py  test_destination_inspiration_service.py  test_device_token_service.py  test_feedback_service.py  test_flight_offer_pricing_service.py  test_flight_search_service.py  test_hotel_search_service.py  test_integration_wrappers.py  test_llm_service.py  test_location_resolver.py  test_manual_flight_service.py  test_notification_service.py  test_plan_acceptance_service.py  test_plan_service.py  (+9 more)
(+3271 files in other folders)
