[project]
name = "api-python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
  "airportsdata>=20240101",
  "alembic>=1.13.0",
  "bcrypt>=5.0.0",
  "cachetools>=5.3.0",
  "fastapi>=0.124.2",
  "firebase-admin>=6.0.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.0",
  "langchain-openai>=0.3.0",
  "langchain-community>=0.3.0",
  "langgraph>=0.2.0",
  "psycopg2-binary>=2.9.11",
  "pydantic-settings>=2.12.0",
  "pydantic[email]>=2.12.5",
  "python-dotenv>=1.2.1",
  "python-jose[cryptography]>=3.5.0",
  "sqlalchemy>=2.0.45",
  "stripe>=14.1.0",
  "tenacity>=8.2.0",
  "uvicorn[standard]>=0.38.0",
  "redis[hiredis]>=5.0.0",
]

[dependency-groups]
dev = [
  "ruff>=0.14.8",
  "pytest>=8.0.0",
  "pytest-cov>=7.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.28.1",
  "passlib[bcrypt]>=1.7.4",
  "mypy>=1.13.0",
  "bandit[toml]>=1.7.9",
  "types-cachetools>=5.0.0",
  "types-redis>=4.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
relative_files = true
branch = true
source = ["src"]
omit = [
    "src/migrations/*",
    "src/seeds/*",
    "src/main.py",
    "src/config/database.py",
    "src/config/env.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

# ---------------------------------------------------------------------------
# mypy — static type checker.
#
# Sprint 3 ships mypy in "ratcheting" mode: strict on the modules we trust to
# be fully typed (utils, middleware, integrations, api/common), silent on the
# ORM-heavy routes/services where SQLAlchemy `Column[X]` noise would drown
# anything actionable. Sprint 4 will tighten the overrides one module at a time.
#
# Running `uv run mypy src/` reports ~540 errors today — almost all are
# SQLAlchemy `Column[UUID]` vs `UUID` mismatches. The plugin that used to fix
# them was dropped for SA 2.0 (they ship PEP 484 types instead) and migrating
# every model to `Mapped[T]` is a separate multi-day refactor. Until then,
# the overrides below keep the signal-to-noise usable.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
packages = ["src"]
exclude = ["src/migrations", "src/seeds"]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = true
warn_unreachable = true
strict_optional = false

# Silence ORM-heavy modules and untyped upstream SDKs. Sprint 4 will migrate
# models to `Mapped[T]` typing and then tighten these overrides one by one.
[[tool.mypy.overrides]]
module = [
    "src.api.*",
    "src.services.*",
    "src.services.admin.*",
    "src.jobs.*",
    "src.agent.*",
    "src.models.*",
    "src.integrations.amadeus.*",
    "src.integrations.aviation_data.*",
    "src.integrations.stripe.*",
    "src.main",
]
ignore_errors = true

# ---------------------------------------------------------------------------
# bandit — static security scanner.
# Runs on `src/` only, skips the usual false-positives in test code.
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["tests", "src/migrations", "src/seeds", ".venv"]
# B101: asserts (fine in tests, we exclude tests anyway)
# B104: hardcoded bind-all — we already harden via settings, keep enabled
# B311: pseudo-random generators — non-crypto uses are fine (cache keys etc.)
skips = ["B101", "B311"]